{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 168,
  "lineage": "793ace1d-95ad-4811-8ebe-1d0c9a45a19b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cp-mgmt-external",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/07da7b3e-7762-4c87-91f3-1ac1edc099e8/resourceGroups/cp-mgmt-rg/providers/Microsoft.Network/networkInterfaces/cp-mgmt-external",
            "ip_configuration": [
              {
                "name": "cp-mgmt-public-ip-config",
                "primary": true,
                "private_ip_address": "10.1.0.10",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/07da7b3e-7762-4c87-91f3-1ac1edc099e8/resourceGroups/cp-mgmt-rg/providers/Microsoft.Network/publicIPAddresses/cp-mgmt-public-ip",
                "subnet_id": "/subscriptions/07da7b3e-7762-4c87-91f3-1ac1edc099e8/resourceGroups/cp-mgmt-rg/providers/Microsoft.Network/virtualNetworks/MikeNet-cp-mgmt-vnet/subnets/MikeNet-cp-mgmt-subnet"
              }
            ],
            "location": "westus2",
            "name": "cp-mgmt-external",
            "private_ip_address": "10.1.0.10",
            "private_ip_addresses": [
              "10.1.0.10"
            ],
            "resource_group_name": "cp-mgmt-rg"
          },
          "dependencies": [
            "azurerm_public_ip.cp-mgmt-public-ip",
            "azurerm_resource_group.cp-mgmt-rg",
            "azurerm_subnet.cp-mgmt-subnet",
            "azurerm_virtual_network.cp-mgmt-network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cp-gw-rg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/07da7b3e-7762-4c87-91f3-1ac1edc099e8/resourceGroups/cp-gw-rg/providers/Microsoft.Network/networkSecurityGroups/cp-gw-nsg",
            "location": "westus2",
            "name": "cp-gw-nsg",
            "resource_group_name": "cp-gw-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Any",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Any",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Staging"
            }
          },
          "dependencies": [
            "azurerm_resource_group.cp-gw-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cp-mgmt-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/07da7b3e-7762-4c87-91f3-1ac1edc099e8/resourceGroups/cp-mgmt-rg/providers/Microsoft.Network/networkSecurityGroups/cp-mgmt-nsg",
            "location": "westus2",
            "name": "cp-mgmt-nsg",
            "resource_group_name": "cp-mgmt-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "CRL-fetch",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "18191",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "CRL-fetch",
                "priority": 160,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "GAiA-portal",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "GAiA-portal",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "ICA-pull",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "18210",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ICA-pull",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Logs",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "257",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Logs",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "SmartConsole-1",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "18190",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SmartConsole-1",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "SmartConsole-2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "19009",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SmartConsole-2",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allow-ssh",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Staging"
            }
          },
          "dependencies": [
            "azurerm_resource_group.cp-mgmt-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cp-vm-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/07da7b3e-7762-4c87-91f3-1ac1edc099e8/resourceGroups/cp-vm-rg/providers/Microsoft.Network/networkSecurityGroups/cp-vm-nsg",
            "location": "westus2",
            "name": "cp-vm-nsg",
            "resource_group_name": "cp-vm-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "allow-http",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "allow-ssh",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Staging"
            }
          },
          "dependencies": [
            "azurerm_resource_group.cp-vm-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "cp-mgmt-public-ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/07da7b3e-7762-4c87-91f3-1ac1edc099e8/resourceGroups/cp-mgmt-rg/providers/Microsoft.Network/publicIPAddresses/cp-mgmt-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.183.90.42",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "cp-mgmt-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "cp-mgmt-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.cp-mgmt-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cp-mgmt-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/07da7b3e-7762-4c87-91f3-1ac1edc099e8/resourceGroups/cp-mgmt-rg/providers/Microsoft.Network/virtualNetworks/MikeNet-cp-mgmt-vnet/subnets/MikeNet-cp-mgmt-subnet",
            "name": "MikeNet-cp-mgmt-subnet",
            "resource_group_name": "cp-mgmt-rg",
            "virtual_network_name": "MikeNet-cp-mgmt-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.cp-mgmt-rg",
            "azurerm_virtual_network.cp-mgmt-network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "cp-mgmt-network-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "id": "/subscriptions/07da7b3e-7762-4c87-91f3-1ac1edc099e8/resourceGroups/cp-mgmt-rg/providers/Microsoft.Network/virtualNetworks/MikeNet-cp-mgmt-vnet",
            "location": "westus2",
            "name": "MikeNet-cp-mgmt-vnet",
            "resource_group_name": "cp-mgmt-rg",
            "tags": {
              "application": "MikeNet",
              "environment": "Staging"
            }
          },
          "dependencies": [
            "azurerm_resource_group.cp-mgmt-rg"
          ]
        }
      ]
    }
  ]
}